sfdx-source/main/default/objects/NTSP_Case__c/NTSP_Case__c.object-meta.xml
<CustomObject>
    <label>NTSP Case</label>
    <nameField>
        <displayFormat>NTSP-{0000}</displayFormat>
        <label>NTSP Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTSP Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>