sfdx-source/main/default/objects/NTSP_Case__c/fields/Check_if_delay_is_0__c.field-meta.xml
<CustomField>
    <fullName>Check_if_delay_is_0__c</fullName>
    <formula>IF( Hours_Delayed__c = 0,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check if delay is 0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>