sfdx-source/main/default/objects/NTSP_Case__c/fields/Description_of_Process_Difficulties__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Process_Difficulties__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Process Difficulties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>