sfdx-source/main/default/objects/NTSP_Case__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>Stroke (LVO)</fullName>
            </value>
            <value>
                <fullName>TIA</fullName>
            </value>
            <value>
                <fullName>Recrudescence</fullName>
            </value>
            <value>
                <fullName>Post tPA F/U</fullName>
            </value>
            <value>
                <fullName>Intracranial Bleed</fullName>
            </value>
            <value>
                <fullName>Migraine</fullName>
            </value>
            <value>
                <fullName>Hypoglycemia</fullName>
            </value>
            <value>
                <fullName>Seizure</fullName>
            </value>
            <value>
                <fullName>Encephalopathy</fullName>
            </value>
            <value>
                <fullName>Syncope</fullName>
            </value>
            <value>
                <fullName>Bell&apos;s palsy</fullName>
            </value>
            <value>
                <fullName>Rood or Peripheral nerve lesion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>