sfdx-source/main/default/objects/NTSP_Case__c/fields/Discussed_at_Conference__c.field-meta.xml
<CustomField>
    <fullName>Discussed_at_Conference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discussed at Conference?</label>
    <type>Checkbox</type>
</CustomField>