sfdx-source/main/default/objects/NTSP_Case__c/fields/Hours_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Delayed__c</fullName>
    <description>Used in reporting. Returns the number of hours passed between LKW date/time and Consult Date/Time</description>
    <formula>IF( OR( ISBLANK(Consult_Date__c) , ISBLANK(Consult_Time_Local_Time_24_hrs__c ), ISBLANK(LKW_Date__c) , ISBLANK(LKW_Time_24_hr__c ) ) = TRUE, 0, 24 *
        (DATETIMEVALUE(TEXT(Consult_Date__c) + &quot; &quot; + IF(LEN(Consult_Time_Local_Time_24_hrs__c) = 3, LEFT(Consult_Time_Local_Time_24_hrs__c,1) &amp; &quot;:&quot; &amp;
        RIGHT(Consult_Time_Local_Time_24_hrs__c,2) &amp; &quot;:00&quot;, LEFT(Consult_Time_Local_Time_24_hrs__c,2) &amp; &quot;:&quot; &amp;
        RIGHT(Consult_Time_Local_Time_24_hrs__c,2) &amp; &quot;:00&quot;)) - DATETIMEVALUE(TEXT(LKW_Date__c) + &quot; &quot; + IF(LEN(LKW_Time_24_hr__c) = 3,
        LEFT(LKW_Time_24_hr__c,1) &amp; &quot;:&quot; &amp; RIGHT(LKW_Time_24_hr__c,2) &amp; &quot;:00&quot;, LEFT(LKW_Time_24_hr__c,2) &amp; &quot;:&quot; &amp;
        RIGHT(LKW_Time_24_hr__c,2) &amp; &quot;:00&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Delayed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>