sfdx-source/main/default/objects/NTSP_Case__c/fields/Interesting_Case__c.field-meta.xml
<CustomField>
    <fullName>Interesting_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesting Case?</label>
    <type>Checkbox</type>
</CustomField>