sfdx-source/main/default/objects/NTSP_Case__c/fields/Is_Consultant_Or_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Is_Consultant_Or_Created_By__c</fullName>
    <formula>Telestroke_Consultant__c = $User.Id || CreatedBy.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Consultant Or Created By</label>
    <type>Checkbox</type>
</CustomField>