sfdx-source/main/default/objects/NTSP_Case__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>