sfdx-source/main/default/objects/NTSP_Case__c/fields/LKW_Time_24_hr__c.field-meta.xml
<CustomField>
    <fullName>LKW_Time_24_hr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LKW Time 24 hr</label>
    <length>6</length>
    <type>Text</type>
</CustomField>