sfdx-source/main/default/objects/NTSP_Case__c/fields/Name_and_Role_of_Caller__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Role_of_Caller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name and Role of Caller</label>
    <type>Checkbox</type>
</CustomField>