sfdx-source/main/default/objects/NTSP_Case__c/fields/Outcome_is_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Outcome_is_cancelled__c</fullName>
    <description>Hidden field used in reporting. Checks whether or not the value of the Outcome field is Cancelled or not, returns 1 if true and 0 if not.</description>
    <formula>IF(ISPICKVAL( Outcome__c ,&apos;Cancelled&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome is Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>