sfdx-source/main/default/objects/NTSP_Case__c/fields/Triage_Nurse_Calls__c.field-meta.xml
<CustomField>
    <fullName>Triage_Nurse_Calls__c</fullName>
    <description>Hidden field used in reporting. Allows calculation of total cases worked by Triage Nurses only.</description>
    <formula>IF( Triaged__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triage Nurse Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>