sfdx-source/main/default/objects/NTSP_Case__c/fields/Triage_Nurse_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Triage_Nurse_Consultant__c</fullName>
    <description>Returns Triage Nurse or Consultant based on whether or not the Triage checkbox if flagged or not respectively. Used in reporting.</description>
    <formula>IF( Triaged__c = TRUE,&apos;Triage Nurse&apos;,&apos;Consultant&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triage Nurse/Consultant</label>
    <type>Text</type>
</CustomField>