sfdx-source/main/default/objects/NTSP_Case__c/listViews/Interesting_NTSP_Cases.listView-meta.xml
<ListView>
    <fullName>Interesting_NTSP_Cases</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Last_Four__c</columns>
    <columns>NTSP_Facility__c</columns>
    <columns>Consult_Date__c</columns>
    <columns>Consult_Time_Local_Time_24_hrs__c</columns>
    <columns>Location__c</columns>
    <columns>Telestroke_Consultant__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>TPA_Administered__c</columns>
    <columns>Outcome__c</columns>
    <columns>Triaged__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Interesting_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Interesting NTSP Cases</label>
    <sharedTo>
        <group>NTSP_Users</group>
    </sharedTo>
</ListView>