sfdx-source/main/default/objects/NTSP_Case__c/listViews/My_NTSP_Cases.listView-meta.xml
<ListView>
    <fullName>My_NTSP_Cases</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Last_Four__c</columns>
    <columns>NTSP_Facility__c</columns>
    <columns>Consult_Date__c</columns>
    <columns>Consult_Time_Local_Time_24_hrs__c</columns>
    <columns>Location__c</columns>
    <columns>Telestroke_Consultant__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>TPA_Administered__c</columns>
    <columns>Outcome__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Consultant_Or_Created_By__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My NTSP Cases</label>
    <sharedTo></sharedTo>
</ListView>